<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent" android:layout_height="match_parent"
	android:background="@color/white">

	<TextView android:id="@+id/shop_home_title"
		android:layout_width="match_parent" android:layout_height="wrap_content"
		android:background="@color/pink" android:textColor="@android:color/black"
		android:textSize="20dip" android:paddingTop="10dip"
		android:paddingBottom="10dip" android:paddingLeft="5dip" android:text="@string/shop_name" />

	<ScrollView android:id="@+id/shop_home_scroller"
		android:layout_width="fill_parent" android:layout_height="fill_parent"
		android:layout_marginTop="5.0dip" android:layout_below="@id/shop_home_title"
		android:fadeScrollbars="true">

		<RelativeLayout android:id="@+id/home_content"
			android:paddingLeft="5.0dip" android:paddingRight="5.0dip"
			android:paddingBottom="10.0dip" android:layout_width="match_parent"
			android:layout_height="match_parent">

			<RelativeLayout android:id="@+id/search_bar"
				android:layout_width="fill_parent" android:layout_height="41.0dip">
				<EditText android:textSize="20.0sp" android:textColor="#ff000000"
					android:id="@+id/search_key_input" android:paddingLeft="10.0dip"
					android:focusable="false" android:layout_width="fill_parent"
					android:layout_height="41.0dip" android:layout_marginRight="46.0dip"
					android:singleLine="true" android:completionThreshold="1"
					android:layout_weight="1.0" android:dropDownWidth="fill_parent"
					android:background="@drawable/search_edit_box" android:hint="@string/search_hint_goods" />

				<Button android:id="@+id/home_search_button"
					android:background="@xml/home_search_btn_selector"
					android:layout_width="46.0dip" android:layout_height="41.0dip"
					android:layout_alignParentRight="true" />
			</RelativeLayout>

			<LinearLayout android:orientation="horizontal"
				android:id="@+id/home_search_bar" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:layout_marginTop="5.0dip"
				android:layout_marginBottom="5.0dip" android:layout_below="@id/search_bar">

				<TextView android:id="@+id/shake_search_btn_home"
					android:textSize="16.0dip" android:textStyle="bold"
					android:textColor="@color/black" android:layout_width="150dip"
					android:layout_height="wrap_content" android:text="@string/search_shake"
					android:background="@drawable/app_shake_phone" android:gravity="center|left"
					android:paddingLeft="40dip" />

				<TextView android:id="@+id/voice_search_btn_home"
				    android:textSize="16.0dip" android:textStyle="bold"
					android:textColor="@color/black" android:layout_marginLeft="10dip"
					android:layout_width="150dip" android:layout_height="wrap_content"
					android:text="@string/search_voice" android:background="@drawable/app_icon_voice"
					android:gravity="center|left" android:paddingLeft="60dip" />

			</LinearLayout>

			<RelativeLayout android:layout_width="match_parent"
				android:layout_height="wrap_content" android:layout_below="@id/home_search_bar"
				android:id="@+id/home_banner_rl">
				<com.huawei.ptn.view.MyViewFlipper android:id="@+id/home_view_flipper"
					android:layout_width="match_parent" android:layout_height="match_parent" />
				<LinearLayout android:orientation="horizontal"
					android:id="@+id/home_radio_ly" android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:layout_marginRight="6.0dip"
					android:layout_marginBottom="5.0dip"
					android:layout_alignParentRight="true"
					android:layout_alignParentBottom="true" />
			</RelativeLayout>


			<LinearLayout android:orientation="vertical" 
			    android:id="@+id/home_index_content" 
			    android:layout_width="fill_parent" 
			    android:layout_height="wrap_content" 
			    android:layout_marginBottom="2.0dip" 
			    android:layout_below="@id/home_banner_rl" /> 
			
		</RelativeLayout>
	</ScrollView>



</RelativeLayout>