<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:id="@+id/image_list_root"
  android:background="#ffffff">
  
  <TextView android:id="@+id/image_text_view"
  	android:layout_width="match_parent"
  	android:layout_height="wrap_content"
  	android:background="@color/pink"
  	android:textColor="@color/black"
    android:textSize="20dip"
    android:paddingTop="10dip"
    android:paddingBottom="10dip"
    android:paddingLeft="5dip"
    style="@style/TextView.Middle.Black" />
  
  <LinearLayout
  	android:id="@+id/layout_bar"
  	android:layout_width="match_parent"
  	android:layout_height="wrap_content"
  	android:background="@drawable/strip_button_up"
  	android:orientation="horizontal"
  	android:layout_alignParentLeft="true"
  	android:layout_below="@id/image_text_view">
  	
  	<RelativeLayout android:id="@+id/slide_layout1"
  		android:layout_width="match_parent"
  		android:layout_height="wrap_content"
  		android:layout_gravity="center_vertical"
  		android:layout_weight="1.0" >
  		<TextView android:id="@+id/slide_tab1"
  			android:layout_width="wrap_content"
  			android:layout_height="wrap_content"
  			android:layout_centerInParent="true"
  			android:text="@string/price"
  			android:textSize="18dip"/>
  	</RelativeLayout>
  	
  	<RelativeLayout android:id="@+id/slide_layout2"
  		android:layout_width="match_parent"
  		android:layout_height="wrap_content"
  		android:layout_gravity="center_vertical"
  		android:layout_weight="1.0" >
  		<TextView android:id="@+id/slide_tab2"
  			android:layout_width="wrap_content"
  			android:layout_height="wrap_content"
  			android:layout_centerInParent="true"
  			android:text="@string/upload_time"
  			android:textSize="18dip"/>
  	</RelativeLayout>
  	
  	<RelativeLayout android:id="@+id/slide_layout3"
  		android:layout_width="match_parent"
  		android:layout_height="wrap_content"
  		android:layout_gravity="center_vertical"
  		android:layout_weight="1.0" >
  		<TextView android:id="@+id/slide_tab3"
  			android:layout_width="wrap_content"
  			android:layout_height="wrap_content"
  			android:layout_centerInParent="true"
  			android:text="@string/update_time"
  			android:textSize="18dip"/>
  	</RelativeLayout>
  	
  </LinearLayout>
  
  <LinearLayout android:id="@+id/image_list_view"
  	android:layout_width="match_parent"
  	android:layout_height="match_parent"
  	android:layout_alignParentLeft="true"
  	android:layout_below="@id/layout_bar"
  	android:background="#ffffff"
  	android:orientation="vertical">
  	<ListView android:id="@android:id/list"
  	android:layout_width="match_parent"
  	android:layout_height="0dip"
  	android:layout_weight="1"
  	android:drawSelectorOnTop="false"
  	android:background="@color/white"
  	android:cacheColorHint="@color/white" />
  
  </LinearLayout>
  	
</RelativeLayout>


































